--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-router/serve": "7.12.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
+    "@tanstack/react-query": "^5.90.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
@@ -39,11 +40,13 @@
     "react-router": "7.12.0",
     "tailwind-merge": "^3.4.0",
     "type-fest": "^4.41.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@types/luxon": "^3.7.1",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
