--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^1.4.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "@supabase/ssr": "^0.8.0",
@@ -38,6 +40,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.12.0",
+    "resend": "^6.9.1",
     "tailwind-merge": "^3.4.0",
     "type-fest": "^4.41.0",
     "zod": "^4.3.5",
